# src/router/adminRouter.js
@@ -1,7 +1,8 @@
 const adminroutes = require("express").Router();
 
 const loginAdmin = require("../Modules/admin/controller/loginAdmin");
+const createCategory = require("../Modules/category/controller/createCategory.js");
 
-adminroutes.post("/admin-login", loginAdmin);
-
+adminroutes.post("/adminlogin", loginAdmin);
+adminroutes.post("/createcategory", createCategory);
 module.exports = adminroutes;
